package echo;
option py_generic_services = true;


message Message {
    required string message = 1;
}

service EchoService {
    rpc echo(Message) returns (Message);
};
